<resources>
    <string name="app_name">Bilingual Reader</string>

    <string name="action_confirm">Confirm</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_return">Return</string>
    <string name="action_positive">Yes</string>
    <string name="action_negative">No</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copied: %s</string>
    <string name="action_app_not_installed">Required App is not installed</string>
    <string name="action_scroll_up">Up</string>
    <string name="action_scroll_down">Down</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_copy_name">Copy: %s</string>
...
    <string name="config_covers_restore_default_title">Restore default cover folder</string>
    <string name="config_covers_restore_default_message">Restoring to the default internal folder will clear the cache from the current folder. Do you want to continue?</string>
    <string name="config_covers_folder_not_empty_error">The selected folder must be completely empty.</string>
    <string name="config_covers_path">Cover cache folder</string>
    <string name="config_covers_change_title">Change cover folder</string>
    <string name="config_covers_change_message">Changing the folder will clear the previous cover cache. Do you want to continue?</string>
    <string name="config_covers_delete">Clear cover cache</string>
    <string name="config_covers_delete_title">Clear cover cache</string>
    <string name="config_covers_delete_description">Do you really want to delete the cover cache?</string>
    <string name="config_covers_delete_success">Successfully cleared cache.</string>
    <string name="config_covers_delete_error">Error clearing cover cache.</string>

    <string name="config_statistics_clear">Clear statistics</string>
    <string name="config_statistics_clear_title">Clear statistics</string>
    <string name="config_statistics_clear_description">Do you really want to clear the statistics?</string>
    <string name="config_statistics_clear_success">Successfully cleared statistics.</string>
    <string name="config_statistics_clear_error">Error clearing statistics.</string>

    <string name="config_update_app">Download and update App</string>
    <string name="config_update_app_title">Update App</string>
...
    </string-array>

    <string name="book_library_line_publisher">Published:</string>
    <string name="book_library_line_authors">Authors:</string>

    <!-- POPUP LIBRARY - Manga / Comic -->
    <string name="menu_manga_config_clear_progress">Clear progress</string>
    <string name="menu_manga_config_delete">Delete</string>
    <string name="menu_manga_config_detail">Manga / Comic detail</string>
    <string name="menu_manga_config_book_mark">Book mark</string>

    <string name="popup_library_manga_tab_item_ordering">Order</string>
    <string name="popup_library_manga_tab_item_filter">Filter</string>
    <string name="popup_library_manga_tab_item_type">Grid</string>

    <string name="popup_library_manga_order_name">For name</string>
    <string name="popup_library_manga_order_date">For date</string>
    <string name="popup_library_manga_order_access">For last access</string>
    <string name="popup_library_manga_order_favorite">Favorite first</string>
...
