...
                    android:layout_height="@dimen/manga_grid_subtitle_big"
                    android:background="@drawable/ico_subtitles_border"
                    android:src="@drawable/ico_subtitles_exist"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/manga_line_favorite"
                    android:layout_width="@dimen/manga_grid_config_content_big"
                    android:layout_height="@dimen/manga_grid_config_content_big"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/manga_line_favorite_icon"
                        style="@style/IconFavorite.Manga"
...
                        android:layout_height="@dimen/manga_grid_config_big"
                        android:background="@drawable/ico_favorite_mark_border"
                        android:src="@drawable/ico_favorite_unmark"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/manga_line_config"
                    android:layout_width="@dimen/manga_grid_favorite_content_big"
                    android:layout_height="@dimen/manga_grid_favorite_content_big"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/manga_line_config_icon"
                        style="@style/IconConfig.Manga"
...
