...
                android:focusable="false"
                android:focusableInTouchMode="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/config_manga_libraries"
            style="@style/Button.LabelStart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/config_button_size"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
...
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/config_manga_reading_touch_screen"
            app:icon="@drawable/ico_view_touch_screen" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/config_manga_reader_switch_show_clock_and_battery"
            style="@style/SwitchMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_manga_reading_show_clock_and_battery" />

        <com.google.android.material.switchmaterial.SwitchMaterial
...
