...
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/config_title_database" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/config_system_backup"
            style="@style/Button.LabelStart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/config_button_size"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
...
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/config_title_statistics" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/config_statistics_delete"
            style="@style/Button.LabelStart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/config_button_size"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
...
